--- a/FigS3_A_clustering.ipynb
+++ b/FigS3_A_clustering.ipynb
@@ -111,7 +111,7 @@
     "import matplotlib as mpl\n",
     "\n",
     "# save figures\n",
-    "data_loc=\"/n/groups/datta/Dana/Estrous/script_paper/\"+'figs/'\n",
+    "data_loc=\cpath+'/figs/'\n",
     "try:\n",
     "    os.mkdir(data_loc)\n",
     "except FileExistsError:\n",
