--- a/Fig4_A_B_right.ipynb
+++ b/Fig4_A_B_right.ipynb
@@ -167,7 +167,7 @@
     "    kld_all=KLD_analysis(data_all)\n",
     "    mean_kld_all = np.mean(kld_all,axis=0)\n",
     "    \n",
-    "    ## create dataframe and save for female\n",
+    "    ## create dataframe and save for male\n",
     "    kld = np.concatenate((np.array(mean_kld_all),\n",
     "                          np.array(mean_kld_indv),\n",
     "                          np.array(mean_kld_rep)))\n",
@@ -498,7 +498,7 @@
     "    data_all=mean_df_lc.drop(['mouse','rep'], axis=1).to_numpy()\n",
     "    cv_all=np.nanstd(np.array(data_all), axis=0)/np.nanmean(np.array(data_all), axis=0)\n",
     "\n",
-    "    ## create dataframe and save for female\n",
+    "    ## create dataframe and save for male\n",
     "    cv = np.concatenate((np.array(cv_all),\n",
     "                          np.array(cv_indv),\n",
     "                          np.array(mean_cv_rep)))\n",
@@ -535,7 +535,7 @@
     "ind=1\n",
     "fdf = pd.DataFrame()\n",
     "\n",
-    "# for males\n",
+    "# for females\n",
     "for i in list(range(1, m,ri)):\n",
     "    ## get current data\n",
     "    df = female_mean_df[(female_mean_df['rep']>=i) & (female_mean_df['rep']<=i+ri-1)]\n",
