--- a/Fig4_A_B_right.ipynb
+++ b/Fig4_A_B_right.ipynb
@@ -207,7 +207,7 @@
     "ind=1 #counter for bins\n",
     "fdf = pd.DataFrame()\n",
     "\n",
-    "# for males\n",
+    "# for females\n",
     "for i in list(range(1, m,ri)):\n",
     "    ## get current data\n",
     "    df = female_mean_df[(female_mean_df['rep']>=i) & (female_mean_df['rep']<=i+ri-1)]\n",
