--- a/SupplementaryFigures/FigS3_E,F.ipynb
+++ b/SupplementaryFigures/FigS3_E,F.ipynb
@@ -446,7 +446,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# create dataframe and save for female\n",
+    "# create dataframe and save for male\n",
     "cv = np.concatenate((np.array(cv_all),\n",
     "                      np.array(cv_indv),\n",
     "                      np.array(mean_cv_rep)))\n",
